[package]
name = "e9571_time_number"
version = "0.1.2"
edition = "2024"
description = "A Rust crate for formatting time, converting between time formats, and generating time-based IDs"
license = "MIT"
repository = "https://github.com/e9571/e9571_time_number"
documentation = "https://docs.rs/e9571_time_number"
homepage = "https://github.com/e9571"
keywords = ["time", "timestamp", "random", "formatting", "datetime"]
categories = ["date-and-time", "algorithms"]

[dependencies]
chrono = "0.4.41"
rand = "0.9.2"
